--- a/css/Aboutme.css
+++ b/css/Aboutme.css
@@ -49,7 +49,7 @@ main > div a:nth-of-type(1)::after{
 }
 
  div > section:nth-of-type(1) p strong{
-    font-family: 'Agbalumo';
+    font-family: 'Agbalumo', Impact, 'Arial Narrow Bold', sans-serif;
     font-size: 5em;
     color: var(--dark-blue);
     text-transform: uppercase;
