--- a/css/Mekkactive.css
+++ b/css/Mekkactive.css
@@ -150,7 +150,7 @@ main > section img:nth-of-type(2){
         font-size: 1.2em;
         width: 80%;
     }
-    
+
     main > div:nth-of-type(2){
 
         flex-direction: column;
@@ -207,10 +207,9 @@ main > section img:nth-of-type(2){
         padding: 0;
         width: 100%;
         margin: 0;
-        transform: none; /* Remove rotation on smaller screens */
     }
 
     main > img:nth-of-type(2) {
-        margin-top: 1em; /* Add some spacing between the images on smaller screens */
+        margin-top: 1em;
     }
 }
