--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,13 @@ footer > section ul li a{
     text-decoration: none;
    
 }
+footer > section ul li a:visited{
+    font-family: 'Poppins',Arial;
+    color: #184967;
+    font-weight: 400;
+    padding:.25em 0;
+    text-decoration: none;
+}
 
 footer > section img {
    width: 5em;
