--- a/css/Absolut.css
+++ b/css/Absolut.css
@@ -88,6 +88,12 @@ main > div section:nth-of-type(1) p{
 
 }
 
+main > div section:nth-of-type(1) p:last-of-type{
+    padding-top: 1em;
+    font-size: 1em;
+    padding-bottom: 1em;
+}
+
 main > div section:nth-of-type(1) a{
     font-family: 'Unbounded', Helvetica, sans-serif;
     font-size: 1em;
