--- a/css/Annika.css
+++ b/css/Annika.css
@@ -89,6 +89,11 @@ main > div section:nth-of-type(2){
     width: 100%;
 }
 
+main > div section:nth-of-type(2) h3{
+    display: none;
+    font-size: .1em;    
+}
+
 main > div section:nth-of-type(2) p{
     font-family: 'Poppins', Helvetica, sans-serif;
     font-size: 1.1em;
