--- a/css/Mekkactive.css
+++ b/css/Mekkactive.css
@@ -104,6 +104,11 @@ main > div:nth-of-type(2) section:nth-of-type(2){
     width: 100%;
 }
 
+main > div:nth-of-type(2) section:nth-of-type(2) h3{
+    display: none;
+    font-size: .1em;
+}
+
 main > div:nth-of-type(2) section:nth-of-type(2) p{
     font-family: 'Poppins', Helvetica, sans-serif;
     font-size: 1.1em;
