--- a/css/Aboutme.css
+++ b/css/Aboutme.css
@@ -67,7 +67,7 @@ div > section:nth-of-type(1){
 
  div > section:nth-of-type(1) p strong{
     font-family: 'Agbalumo', Impact, 'Arial Narrow Bold', sans-serif;
-    font-size: 5em;
+    font-size: 3.5em;
     color: var(--dark-blue);
     text-transform: uppercase;
 }
@@ -156,9 +156,9 @@ progress::-webkit-progress-value {
 }
 
 main > h3{ 
-    font-family: 'Poppins', Helvetica, sans-serif;
+    font-family: 'Unbounded', Helvetica, sans-serif;
     font-weight: 500;
-    font-size: 2.5em;
+    font-size: 2.2em;
     color: var(--dark-blue);
     margin-left: 2em;
     padding-top:2em;
@@ -180,8 +180,34 @@ main > ul{
     text-decoration: none;
 }
 
+
+main > ul li {
+    display:grid;
+    flex-direction:column-reverse;
+    /* grid-template-columns: 10em; */
+    list-style: none;
+   }
+
+main > ul h3{
+    grid-row-start: 2;
+    justify-self: center;
+    align-self: center;
+     font-family: 'Unbounded', Helvetica, sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    font-style: italic;
+    color: var(--black);
+    text-align: center;
+    padding:1.2em .5em;
+    /* height: 5em; */
+   }
+
 main > ul img{
- width: 17em;
+    grid-row-start: 1;
+    justify-self: center;
+    align-self: center;
+    width: 17em;
+ 
  
 }
 
@@ -319,3 +345,9 @@ main > ul img{
         width: 100%;
     }
 }
+
+
+
+
+
+ 
