--- a/css/Aboutme.css
+++ b/css/Aboutme.css
@@ -59,8 +59,7 @@ div > section:nth-of-type(1){
  div > section:nth-of-type(1) p{
     font-family: 'Poppins', Helvetica, sans-serif;
     font-size: 1em;
-    padding: 1em;
-
+    padding: .5 em;
     margin-left: 10%;
     width: 75%;
 }
