--- a/css/Mekkactive.css
+++ b/css/Mekkactive.css
@@ -152,6 +152,14 @@ main > section img:nth-of-type(2){
         width: 80%;
     }
 
+    main >  div:nth-of-type(1) img{
+        grid-column-start: 1;
+        width: 40%;
+        justify-self:end ;
+        align-self:start;
+        margin-top: 12em;
+     }
+
     main > div:nth-of-type(2){
 
         flex-direction: column;
