--- a/css/Aboutme.css
+++ b/css/Aboutme.css
@@ -55,7 +55,7 @@ div > section:nth-of-type(1){
  div > section:nth-of-type(1) p{
     font-family: 'Poppins', Helvetica, sans-serif;
     font-size: 1em;
-    padding: 1em;
+    padding: .6em;
     margin-left: 10%;
     width: 75%;
 }
